--- a/styles/main.css
+++ b/styles/main.css
@@ -20,7 +20,8 @@ body {
 a {
     color: #a10ebd;
 }
-hgroup .section-heading {
+
+.section-heading {
 	text-align: center;
 	margin: 0 auto;
 	width: 97.5%;
@@ -42,9 +43,6 @@ h1#main-heading {
 	width: 97.5%;
 }
 
-hgroup .section-heading:nth-of-type(1) {
-	margin: 0 auto 0;
-}
 section {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
