--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&display=swap');
 
 /* CSS Reset */
@@ -20,7 +19,6 @@ body {
 a {
     color: #a10ebd;
 }
-
 .section-heading {
 	text-align: center;
 	margin: 0 auto;
@@ -70,9 +68,18 @@ figcaption {
     width: 90%;
     max-width: 800px;
     margin: 0 auto;
-    padding-top: 1rem;
+    padding-top: 0.25rem;
+	padding-bottom: 0.25rem;
     /* point this out to class and toggle it to show effect */
     word-break: break-word;
+}
+
+.attribution-link {
+	color: #0030ff;
+}
+
+.attribution-link:hover {
+	color: #000;
 }
 
 p.caption a {
