--- a/styles/main.css
+++ b/styles/main.css
@@ -5,6 +5,8 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+	-webkit-locale: auto;
+  	white-space: normal;
 }
 
 /* End CSS Reset */
