--- a/styles/resume.css
+++ b/styles/resume.css
@@ -17,23 +17,25 @@ body {
 
 /* =header font size */
 h1, h2, h3, h4, h5, h6 {
-	color: #111;
 	font-family: "Tahoma", "Helvetica", "Droid Sans", sans-serif;
 	letter-spacing: 1px;
 }
 
 h1 {
 	border-bottom: 0.07142855em double #444;
-	color: #000; font: normal 3.5em/2 "Georgia", sans-serif;
+	font: normal 3.5em/2 "Georgia", sans-serif;
 	text-align: center;
 }
 
 h2 {
-	color: #000;
 	font-size: 1.5em;
 	letter-spacing: 0.07142855em;
 	font-variant: small-caps;
 } /* 24px / 16px */
+
+h1, h2 {
+	color: #000;
+}
 
 h3 {
 	border-bottom: 0.07142855em solid #333;
@@ -60,7 +62,11 @@ h4 {
 	line-height: 1.2857em;
 	margin-bottom: 0.375em;
 	margin-top: 1.0893em;
-	}  /* 18px / 16px */
+}/* 18px / 16px */
+
+h4, h5, h6 {
+	color: #111;
+}
 
 /* =p leading */
 p {
@@ -113,7 +119,8 @@ header h1 a:hover {
 .time {
 	font-size: 0.75em;
 	font-weight: normal;
-	float: right; margin-top: 0;
+	float: right;
+	margin-top: 0;
 	padding-top: 0;
 	position: absolute;
 	right: 0;
@@ -158,7 +165,8 @@ a:link, a:active, a:focus, a:visited, a:hover {
 	}
 
     header h2, header p {
-		margin-left: 0; padding-left: 0;
+		margin-left: 0;
+		padding-left: 0;
 	}
 
     .page .professional_experience, .page .resume_skills {
@@ -208,8 +216,21 @@ a:link, a:active, a:focus, a:visited, a:hover {
 }
 
 @media (min-width: 900px) {
-    html, body, .page {border: none !important; color: #444 !important; text-shadow: none !important; filter:none !important; margin: 0; padding: 0; -ms-filter: none !important;}
-    body {background-color: rgb(110,110,110) !important;}
+
+    html, body, .page {
+		border: none !important;
+		color: #444 !important;
+		filter:none !important;
+		-ms-filter: none !important;
+		margin: 0;
+		padding: 0;
+		text-shadow: none !important;
+	}
+
+    body {
+		background-color: rgb(110,110,110) !important;
+	}
+
 	.footer-nav li {
 		border-bottom: none;
 	}
@@ -217,6 +238,7 @@ a:link, a:active, a:focus, a:visited, a:hover {
 	.footer-nav li:nth-of-type(1) {
 		margin-left: 0.75rem;
 	}
+
     /* page holder */
     .page {
 		background: #fff;
