--- a/styles/quote-cloud.css
+++ b/styles/quote-cloud.css
@@ -112,7 +112,7 @@ main h1 {
 }
 
 @media (min-width: 600px) {
-    blockquote {
+    h2, blockquote {
         font-size: 2rem;
 	}
 
@@ -122,7 +122,7 @@ main h1 {
 }
 
 @media (max-width: 640px) and (max-height: 360px) {
-    blockquote {
+    h2, blockquote {
         font-size: 1.3rem;
 	}
 }
