Add Safari font fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -5,9 +5,9 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-	/* to fix the way Safari 14+ reads certain Google Fonts incorrectly */
-	-webkit-locale: auto;
-  	white-space: normal;
+    /* to fix the way Safari 14+ reads certain Google Fonts incorrectly */
+    -webkit-locale: auto;
+    white-space: normal;
 }
 
 /* End CSS Reset */
@@ -23,26 +23,24 @@ a {
 }
 
 h1, h2 {
-	/* to fix the way Safari 14+ reads certain Google Fonts property declarations incorrectly */
-	font-weight: normal;
+    /* to fix the way Safari 14+ reads certain Google Fonts property declarations incorrectly */
+    font-weight: normal;
 }
 
 /* CSS Grid section styling for portfolio.html page. */
-
 section {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
 }
 
 /* End CSS Grid section styling for portfolio.html page */
-
 /* image styling */
 img {
     display: block;
     height: auto;
     margin: 0 auto;
     max-width: 800px;
-	width: 100%;
+    width: 100%;
 }
 
 figure {
@@ -50,7 +48,7 @@ figure {
     display: block;
     margin: 4rem auto;
     max-width: 800px;
-	width: 90%;
+    width: 90%;
 }
 
 figcaption {
@@ -59,13 +57,12 @@ figcaption {
     padding-bottom: 0.25rem;
     padding-top: 0.25rem;
     text-align: center;
-	width: 90%;
+    width: 90%;
     /* point this out to class and toggle it to show effect */
     word-break: break-word;
 }
 
 /* End global styling */
-
 /* h1 styling for index.html */
 #landing-main-heading {
     margin-top: 0.75rem;
@@ -84,13 +81,11 @@ figcaption {
     margin: 18vh auto;
     max-width: 600px;
     text-align: center;
-	width: 90%;
+    width: 90%;
 }
 
 /* End section styling for index.html */
-
 /* article styling for index.html */
-
 .landing-article {
     margin: auto;
     text-align: center;
@@ -129,7 +124,6 @@ figcaption {
 }
 
 /* End article styling for index.html */
-
 /* media query smaller screens for section and article elements in index.html */
 @media (max-width: 799px) {
     .landing-section {
@@ -144,7 +138,6 @@ figcaption {
 }
 
 /* End media query smaller screens for section and article elements in index.html */
-
 /* h1 styling in portfolio.html */
 .main-heading {
     margin-bottom: 1.5rem;
@@ -175,7 +168,6 @@ figcaption {
 }
 
 /* End a element class attribution-link styling in portfolio.html */
-
 /* p element caption class styling in portfolio.html - wraps around the entire CC attribution */
 p.caption a {
     font-style: italic;
@@ -184,7 +176,6 @@ p.caption a {
 }
 
 /* End p element caption class styling in portfolio.html - wraps around the entire CC attribution */
-
 /* media query for section element CSS Grid columns in viewport < 799px in portfolio.html */
 @media (max-width: 799px) {
     section {
@@ -195,7 +186,6 @@ p.caption a {
 }
 
 /* End media query for section element CSS Grid columns in viewport < 799px in portfolio.html */
-
 /* nav styles using Flexbox (screens greater than 899px) */
 /* Logo Styling */
 .header, .index-header {
@@ -203,7 +193,7 @@ p.caption a {
 }
 
 .header .logo, .index-header .logo {
-    font-size: 2.25rem;
+    font-size: 2rem;
     height: 76px;
     letter-spacing: 0.07rem;
     text-align: center;
@@ -213,7 +203,6 @@ p.caption a {
 }
 
 /* End Header Logo Styling */
-
 /* nav styles using Flexbox (screens greater than 899px) */
 nav {
     /* background: #D6EFFF; */
@@ -250,27 +239,33 @@ a:hover {
 }
 
 /* End nav styles using Flexbox (screens greater than 899px) */
-
 /* media query for site navigation for screens smaller than 900px */
 @media (max-width: 899px) {
-
-	.header {
-		background: rgba(104, 151, 187, 1);
+    .header {
+        background: rgba(104, 151, 187, 1);
         margin-top: 0;
-		position: sticky;
-		top: 0;
+        position: sticky;
+        top: 0;
     }
 
-	.index-header {
-		/* move up logo in index.html. Otherwise too low. Deal with it
+    .index-header {
+        /* move up logo in index.html. Otherwise too low. Deal with it
 		differently than the header on other pages, because not sticky.
 		Header everywhere else is sticky. So use the top property there. */
-		margin-top: 0.25rem;
-	}
+        margin-top: 0.75rem;
+    }
 
+    .index-header,
+	.index-header nav,
+	.index-header .logo,
+	.header nav,
 	.header .logo {
-		padding-top: 1rem;
-	}
+        vertical-align: middle;
+    }
+
+    .header .logo {
+        padding-top: 1rem;
+    }
 
     ul {
         /* display: block; */
@@ -296,7 +291,7 @@ a:hover {
         cursor: pointer;
         display: block;
         height: 36px;
-        position: fixed;
+        position: absolute;
         right: 20px;
         top: 20px;
         width: 36px;
@@ -322,9 +317,9 @@ a:hover {
         /* transition adds a little animation when sliding in and out the menu */
         transition: transform 0.2s ease;
         width: 100vw;
-		/* needed for me because of my intro box in index.html.
+        /* needed for me because of my intro box in index.html.
 		Otherwise navigation backgrop would be behind the intro box when opened */
-		z-index: 10;
+        z-index: 10;
     }
 
     .showNav {
@@ -334,7 +329,6 @@ a:hover {
 }
 
 /* End media query for site navigation for screens smaller than 900px */
-
 /* Site Footer  Styling */
 .site-credits {
     text-align: center;
