--- a/styles/quote-cloud.css
+++ b/styles/quote-cloud.css
@@ -122,12 +122,24 @@ main h1 {
 }
 
 .quote-cloud {
-	font-size: 1rem;
 	text-align: center;
 }
 
+h2 {
+	font-size: 1.5rem;
+}
+
+blockquote {
+	font-size: 1rem;
+}
+
 @media (min-width: 600px) {
-    h2, blockquote {
+	
+	h2 {
+		font-size: 2.5rem;
+	}
+
+    blockquote {
         font-size: 2rem;
 	}
 
