--- a/styles/quote-cloud.css
+++ b/styles/quote-cloud.css
@@ -1,65 +1,63 @@
-/* CSS Reset */
 * {
-    margin: 0;
-    padding: 0;
-	/* to fix the way Safari 14+ reads certain Google Fonts incorrectly */
-	-webkit-locale: auto;
-  	white-space: normal;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
-html {
-	font-size: 100.01%;
-}
-/* End CSS Reset */
-
+/* Global Styling */
 body {
-	background-image: url(/images/bryan-minear-317365.jpg);
-	background-position: center center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	color: #dcf0fb;
-	font-family: 'Barlow', sans-serif;
-	font-size: 0.75em;
-	font-weight: normal;
-	line-height: 1.5;
-	min-height: 100vh;
 	overflow-x: hidden;
+	font-family: 'Barlow', sans-serif;
+	background: #bada55;
 }
+
+h1 {
+	margin-top: 3rem;
+}
+
+section h1, h2 {
+	text-align: center;
+}
+
+/* End Global Styling */
+
+/* Site navigation desktop (viewports less than 900px wide) */
 
 /* nav styles using Flexbox (screens greater than 899px) */
 /* Logo Styling */
 
-.about-header {
-	background: rgba(68,0,108, 0.5);
+.header {
+	margin-top: 0;
 }
 
-.about-header .logo {
+.header {
+	background: rgba(104, 151, 187, 1);
+}
+
+.header .logo {
 	padding-top: 0.25rem;
 }
 
 .logo {
-	height: 97.5%;
-	max-height: 200px;
-	max-width: 150px;
-	position: relative;
+	height: 100%;
+	max-height: 250px;
+	max-width: 187.50px;
     text-align: center;
     text-decoration: none;
-	top: 0.75rem;
-	width: 97.5%;
+	width: 100%;
 }
 
 .brand {
 	height: auto;
-	margin-top: 0.25rem;
-	max-width: 7.9688rem;
-	width: 97.5%;
+	margin-top: 0;
+	max-width: 7.8125rem;
+	width: 100%;
 }
-
 /* End Header Logo Styling */
 
 /* nav styles using Flexbox (screens greater than 899px) */
 .navbar {
-	background: transparent;
+    background: transparent;
 	display: flex;
 	align-items: center;
 	height: 70px;
@@ -84,95 +82,46 @@ li {
 }
 
 a {
-    color: #b4a8d9;
+    color: #000;
     cursor: pointer;
-    padding: 2.25vw;
+    padding: 2vw;
     text-decoration: none;
 }
 
 a:hover {
-    color: #fff;
+    color: #800080;
 }
 
 .hamburger {
     display: none;
 }
 
-main h1 {
-	color: #44006c;
-	font-size: 3.5em;
-	font-weight: normal;
-	line-height: 2;
-	margin-top: 5rem;
-	text-align: center;
-}
-
-/* Quote Cloud */
-
-.quote-container {
-	cursor: pointer;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	height: 50vh;
-	justify-content: center;
-	margin: 0 auto;
-	padding: 0 1.5rem;
-	width: 75%;
-}
-
-.quote-cloud {
-	text-align: center;
-}
-
-h2 {
-	font-size: 1.5rem;
-}
-
-blockquote {
-	font-size: 1rem;
-}
-
-@media (min-width: 600px) {
-
-	h1 {
-		font-size: 3.5rem;
-	}
-
-	h2 {
-		font-size: 2.5rem;
-	}
-
-    blockquote {
-        font-size: 2rem;
-	}
-}
-
-@media (max-width: 640px) and (max-height: 360px) {
-    h2, blockquote {
-        font-size: 1.3rem;
-	}
-}
-
 /* End nav styles using Flexbox (screens greater than 899px) */
-
 /* media query for site navigation for screens smaller than 900px */
 @media (max-width: 899px) {
+    .header {
+        background: rgba(104, 151, 187, 1);
+        margin-top: 0;
+        position: sticky;
+        top: 0;
+    }
+
+	.header .logo {
+		padding-top: 1.5rem;
+	}
 
 	.brand {
 		height: auto;
-		margin-top: -0.25rem;
-		margin-left: 0.5rem;
-		max-width: 7.9688rem;
+		margin-top: -1.25rem;
+		max-width: 7.8125rem;
 		width: 100%;
 	}
 
     li {
-        margin: 0 0 0 1.25rem;
+        margin: 0 0 0 1.5rem;
     }
 
     a {
-		color: #44006c;
         display: block;
     }
 
@@ -191,7 +140,7 @@ blockquote {
         top: 20px;
         width: 36px;
         /* always keep ham on top of everything */
-        z-index: 1000;
+        z-index: 10000;
     }
 
     /* change hamburger image to close */
@@ -201,56 +150,120 @@ blockquote {
     }
 
     .main-nav {
-        background: #90ac71;
 		display: block;
+        background: #6897BB;
         height: 100vh;
         left: 0;
 		margin-top: 0;
 		padding-top: 5rem;
-        position: absolute;
+        overflow-y: hidden;
+        position: fixed;
         top: 0;
         /* hide the menu above the screen by default */
         transform: translateY(-100%);
         /* transition adds a little animation when sliding in and out the menu */
         transition: transform 0.2s ease;
         width: 100vw;
-		/* needed for me because of my intro box in index.html.
+        /* needed for me because of my intro box in index.html.
 		Otherwise navigation backgrop would be behind the intro box when opened */
-		z-index: 10;
+        z-index: 10;
     }
 
     .showNav {
         /* show the menu */
         transform: translateY(0);
     }
-
-	main h1 {
-		margin-top: 0;
-	}
 }
 
 /* End media query for site navigation for screens smaller than 900px */
 
-/* Site Footer  Styling */
+/* Section quote container styling */
+.quote-container {
+	cursor: pointer;
+	display: flex;
+    align-items: center;
+	flex-direction: column;
+	font-family: 'Barlow', sans-serif;
+	height: 50vh;
+	justify-content: center;
+	margin: 3rem auto;
+    margin: 12vh auto;
+    max-width: 800px;
+    width: 90%;
+}
+
+/* article quote-cloud styling desktop */
+
+.quote-cloud {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	justify-content: center;
+	margin: 0.5rem;
+	text-align: center;
+	width: 90%;
+}
+
+.quote-cloud blockquote {
+	color: #fff3f3;
+	margin: 0 auto;
+	text-shadow: 1px 2px 2px #000;
+	width: 90%;
+}
+
+/* end article quote-cloud styling desktop */
+
+/* font-size specific max-width: 640px and max-height: 360px (Microsoft Lumia 550) */
+
+@media (max-width: 640px) and (max-height: 360px) {
+
+    h2, blockquote {
+        font-size: 1.3rem;
+	}
+}
+
+/* end font-size specific max-width: 640px and max-height: 360px (Microsoft Lumia 550) */
+
+/* font-size styling h1, h2, blockquote media query min-width: 600px */
+@media (min-width: 600px) {
+
+	h1 {
+		font-size: 3.5rem;
+	}
+
+	h2 {
+		font-size: 2.5rem;
+	}
+
+    blockquote {
+        font-size: 2rem;
+	}
+}
+
+/* End media query smaller screens for section and article elements in index.html */
+
+/* Footer Styling */
+
 .site-credits {
-	color: #b4a8d9;
 	text-align: center;
 }
 
 /* Sticky Footer Styling */
 
+html, body {
+	height: 100%;
+}
+
 body {
-    display: flex;
-    flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
 
 .Site-content {
-    flex: 1 0 auto;
+	flex: 1 0 auto;
 }
 
 .site-credits {
-    flex-shrink: 0;
-    font-size: 1.5rem;
+	flex-shrink: 0;
+	font-size: 1.2rem;
 }
-
-/* End Sticky Footer Syling */
