--- a/styles/quote-cloud.css
+++ b/styles/quote-cloud.css
@@ -1,78 +1,75 @@
 * {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 /* Global Styling */
 body {
-	overflow-x: hidden;
-	font-family: 'Barlow', sans-serif;
-	background: #bada55;
+    overflow-x: hidden;
+    font-family: 'Barlow', sans-serif;
+    background: #bada55;
 }
 
 h1 {
-	margin-top: 3rem;
+    margin-top: 3rem;
 }
 
 section h1, h2 {
-	text-align: center;
+    text-align: center;
 }
 
 /* End Global Styling */
-
 /* Site navigation desktop (viewports less than 900px wide) */
-
 /* nav styles using Flexbox (screens greater than 899px) */
 /* Logo Styling */
-
 .header {
-	margin-top: 0;
+    margin-top: 0;
 }
 
 .header {
-	background: rgba(104, 151, 187, 1);
+    background: rgba(104, 151, 187, 1);
 }
 
 .header .logo {
-	padding-top: 0.25rem;
+    padding-top: 0.25rem;
 }
 
 .logo {
-	height: 100%;
-	max-height: 250px;
-	max-width: 187.50px;
+    height: 100%;
+    max-height: 250px;
+    max-width: 187.50px;
     text-align: center;
     text-decoration: none;
-	width: 100%;
+    width: 100%;
 }
 
 .brand {
-	height: auto;
-	margin-top: 0;
-	max-width: 7.8125rem;
-	width: 100%;
+    height: auto;
+    margin-top: 0;
+    max-width: 7.8125rem;
+    width: 100%;
 }
-/* End Header Logo Styling */
 
+/* End Header Logo Styling */
 /* nav styles using Flexbox (screens greater than 899px) */
 .navbar {
     background: transparent;
-	display: flex;
-	align-items: center;
-	height: 70px;
+    display: flex;
+    align-items: center;
+    height: 70px;
     justify-content: space-between;
     padding-bottom: 0;
-	width: 100vw;
+    width: 100vw;
 }
 
 .main-nav {
     display: flex;
     justify-content: flex-end;
     margin-bottom: 1.5rem;
-	margin-right: 1rem;
-	margin-top: 2rem;
-	width: 100vw;
+    margin-right: 1rem;
+    margin-top: 2rem;
+    width: 100vw;
 }
 
 li {
@@ -106,16 +103,16 @@ a:hover {
         top: 0;
     }
 
-	.header .logo {
-		padding-top: 1.5rem;
-	}
+    .header .logo {
+        padding-top: 1.5rem;
+    }
 
-	.brand {
-		height: auto;
-		margin-top: -1.25rem;
-		max-width: 7.8125rem;
-		width: 100%;
-	}
+    .brand {
+        height: auto;
+        margin-top: -1.25rem;
+        max-width: 7.8125rem;
+        width: 100%;
+    }
 
     li {
         margin: 0 0 0 1.5rem;
@@ -150,12 +147,12 @@ a:hover {
     }
 
     .main-nav {
-		display: block;
+        display: block;
         background: #6897BB;
         height: 100vh;
         left: 0;
-		margin-top: 0;
-		padding-top: 5rem;
+        margin-top: 0;
+        padding-top: 5rem;
         overflow-y: hidden;
         position: fixed;
         top: 0;
@@ -176,94 +173,89 @@ a:hover {
 }
 
 /* End media query for site navigation for screens smaller than 900px */
-
 /* Section quote container styling */
 .quote-container {
-	cursor: pointer;
-	display: flex;
+    cursor: pointer;
+    display: flex;
     align-items: center;
-	flex-direction: column;
-	font-family: 'Barlow', sans-serif;
-	height: 50vh;
-	justify-content: center;
-	margin: 3rem auto;
+    flex-direction: column;
+    font-family: 'Barlow', sans-serif;
+    height: 50vh;
+    justify-content: center;
+    margin: 3rem auto;
     margin: 12vh auto;
     max-width: 800px;
     width: 90%;
 }
 
 /* article quote-cloud styling desktop */
-
 .quote-cloud {
-	display: flex;
-	align-items: center;
-	flex-direction: column;
-	justify-content: center;
-	margin: 0.5rem;
-	text-align: center;
-	width: 90%;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0.5rem;
+    text-align: center;
+    width: 90%;
+}
+
+.quote-cloud h2 {
+    font-weight: normal;
 }
 
 .quote-cloud blockquote {
-	color: #fff3f3;
-	margin: 0 auto;
-	text-shadow: 1px 2px 2px #000;
-	width: 90%;
+    color: #fff3f3;
+    margin: 0 auto;
+    text-shadow: 1px 2px 2px #000;
+    width: 90%;
 }
 
 /* end article quote-cloud styling desktop */
-
 /* font-size specific max-width: 640px and max-height: 360px (Microsoft Lumia 550) */
-
 @media (max-width: 640px) and (max-height: 360px) {
-
     h2, blockquote {
         font-size: 1.3rem;
-	}
+    }
 }
 
 /* end font-size specific max-width: 640px and max-height: 360px (Microsoft Lumia 550) */
-
 /* font-size styling h1, h2, blockquote media query min-width: 600px */
 @media (min-width: 600px) {
+    h1 {
+        font-size: 3.5rem;
+    }
 
-	h1 {
-		font-size: 3.5rem;
-	}
-
-	h2 {
-		font-size: 2.5rem;
-	}
+    h2 {
+        font-size: 2.5rem;
+    }
 
     blockquote {
         font-size: 2rem;
-	}
+    }
 }
 
 /* End media query smaller screens for section and article elements in index.html */
-
 /* Footer Styling */
-
 .site-credits {
-	text-align: center;
+    text-align: center;
 }
 
 /* Sticky Footer Styling */
-
 html, body {
-	height: 100%;
+    height: 100%;
 }
 
 body {
-	display: flex;
-	flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 .Site-content {
-	flex: 1 0 auto;
+    flex: 1 0 auto;
 }
 
 .site-credits {
-	flex-shrink: 0;
-	font-size: 1.2rem;
+    flex-shrink: 0;
+    font-size: 1.2rem;
 }
