Add semi-colon to end of header p property declaration

--- a/styles/resume.css
+++ b/styles/resume.css
@@ -316,7 +316,7 @@ a:link, a:active, a:focus, a:visited, a:hover {
 	}  /* 270px / 960px */
 
     header p {
-		width: 57.291667%
+		width: 57.291667%;
 	}
 
 	b {
