--- a/styles/contact.css
+++ b/styles/contact.css
@@ -197,7 +197,7 @@ form {
 	justify-content: center;
 	margin: 0 auto;
 	max-width: 600px;
-	padding: 1.5rem 0.5rem 3rem;
+	padding: 1.5rem 0.5rem 0;
 	width: 90%;
 }
 
@@ -263,6 +263,14 @@ input {
 
 /* section .contact-info class styling */
 
+.contact-info {
+	width: 85%;
+}
+
+.contact-info fieldset {
+	background: #34d0a5;
+}
+
 .contact-info h2 {
 	text-align: center;
 	margin-bottom: 1.5rem;
@@ -275,13 +283,42 @@ input {
 	margin-left: 0.5rem;
 }
 
+/* section .warning class styling */
+
+.warning h2 {
+	margin-top: 3rem;
+	text-align: center;
+}
+
+.warning {
+	display: block;
+	margin: 0 auto 1.5rem;
+	max-width: 600px;
+	width: 90%;
+}
+
+.warning-wrapper fieldset {
+	display: flex;
+	align-items: center;
+	background: #ff7452;
+	margin: 1.5rem auto;
+	padding: 5px 5px 10px;
+	width: 94%;
+}
+
+.warning-wrapper span {
+	color: #fff7db;
+	font-weight: normal;
+	text-decoration: underline;
+}
+
 /* div .info-wrapper class styling (wraps aorund fieldset containging
 Maria tel and email info) */
 
 .info-wrapper fieldset {
 	display: flex;
 	align-items: center;
-	margin-bottom: 3rem;
+	margin: 0 auto 3rem;
 	width: 100%;
 }
 
@@ -294,9 +331,9 @@ Maria tel and email info) */
 	}
 
 	.contact-info {
+		max-width: 600px;
 		text-align: center;
 		width: 90%;
-		max-width: 600px;
 	}
 
 	.contact-info h2 {
@@ -316,8 +353,6 @@ Maria tel and email info) */
 		display: block;
 		width: 95%;
 		margin: 0 auto 3rem;
-		/* flex-direction: column;
-		align-items: flex-start; */
 	}
 }
 
